objects/ASI_CRM_Order_Form__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Form_Name__c</fullName>
        <label>Order Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Form_Type__c</fullName>
        <label>Order Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal Item</fullName>
                </value>
                <value>
                    <fullName>RTD</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T1 Master</label>
        <type>Checkbox</type>
    </fields>
    <label>Order Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Order_Form_Name__c</columns>
        <columns>ASI_CRM_Order_Form_Type__c</columns>
        <columns>ASI_CRM_T1_Master__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OF-{00000000}</displayFormat>
        <label>Order Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Forms</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Order_Form</fullName>
        <active>true</active>
        <label>CN Order Form</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>